--- a/new-components/Dockerfile
+++ b/new-components/Dockerfile
@@ -17,7 +17,6 @@ RUN CGO_CPPFLAGS="-D_FORTIFY_SOURCE=2 -fstack-protector-all" \
     # Makes memory exploitation harder.
     # Add a small overhead at compile time.
     GOFLAGS="-buildmode=pie" \
-    CGO_ENABLED=0 \
     GOOS="linux" \
     GOARCH="amd64" \
       go build -ldflags "-s -w" -trimpath -o app ${COMPONENT_BINARY_SOURCE_PATH}
@@ -26,14 +25,9 @@ RUN CGO_CPPFLAGS="-D_FORTIFY_SOURCE=2 -fstack-protector-all" \
 RUN mkdir -p /workspace
 
 # Used to actually run the binary in minimal image.
-FROM gcr.io/distroless/base-debian12:nonroot
+FROM gcr.io/distroless/base-debian12
 
-COPY --from=builder --chown=65534:65534 /wrk/app /bin/app
-COPY --from=builder --chown=65534:65534 /workspace /workspace
-
-# Run as UID for 'nobody' since k8s pod securityContext runAsNonRoot can't resolve the user ID:
-# https://github.com/kubernetes/kubernetes/issues/40958
-USER 65534
+COPY --from=builder /wrk/app /bin/app
 
 # Setting the workdir where we'll clone repositories.
 WORKDIR /workspace
