--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -4,7 +4,11 @@ on:
   push:
     tags:
       # Matches: new-components/scanners/gosec/v1.0.0 or new-components/scanners/gosec/v1.0.0-alpha3 for example.
-      - 'new-components/(scanners|targets|reporters|filters|enrichers)/[^/]+/v[0-9]+\.[0-9]+\.[0-9]+.*'
+      - 'new-components/targets/*/v[0-9].[0-9].[0-9]*'
+      - 'new-components/scanners/*/v[0-9].[0-9].[0-9]*'
+      - 'new-components/enrichers/*/v[0-9].[0-9].[0-9]*'
+      - 'new-components/filters/*/v[0-9].[0-9].[0-9]*'
+      - 'new-components/reporters/*/v[0-9].[0-9].[0-9]*'
 
 jobs:
   package:
