--- a/components/producers/github-codeql-javascript-typescript/task.yaml
+++ b/components/producers/github-codeql-javascript-typescript/task.yaml
@@ -16,7 +16,7 @@ spec:
   steps:
   - name: run-codeql
     imagePullPolicy: IfNotPresent
-    image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/producers/github-codeql:{{ .Chart.AppVersion }}'
+    image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/producers/github-codeql-javascript:{{ .Chart.AppVersion }}'
     env:
       - name: GITHUB_TOKEN
         value: "$(params.producer-github-codeql-javascript-typescript-github-token)"
@@ -28,6 +28,8 @@ spec:
         --threads=10\
         --overwrite
       
+      /codeql/codeql database finalize $(workspaces.scratch.path)/codeql-dbs/javascript || true
+
       /codeql/codeql database analyze $(workspaces.scratch.path)/codeql-dbs/javascript codeql/javascript-queries --format=sarif-latest --output=$(workspaces.scratch.path)/out.sarif.json
 
   - name: produce-issues
