new codeql component that speaks ocsf

--- a/new-components/scanners/codeql/codeql-image/Makefile
+++ b/new-components/scanners/codeql/codeql-image/Makefile
@@ -1,16 +1,11 @@
-.PHONY: container publish
+.PHONY: image
 
-CONTAINER_REPO=
-SMITHY_VERSION=
-SOURCE_CODE_REPO=
 BUILD_ARCHITECTURE=
+COMPONENT_REGISTRY=
+COMPONENT_REPOSITORY=
+COMPONENT_TAG=
 
-DOCKER=docker
-
-container:
-	$(DOCKER) build --tag $(CONTAINER_REPO)/components/producers/codeql:$(SMITHY_VERSION) \
-					$$([ "${SOURCE_CODE_REPO}" != "" ] && echo "--label=org.opencontainers.image.source=${SOURCE_CODE_REPO}" ) \
-					--platform "$(BUILD_ARCHITECTURE)" . 1>&2
-
-publish: 
-	$(DOCKER) push $(CONTAINER_REPO)/components/producers/codeql:$(SMITHY_VERSION) 1>&2
+image:
+	docker build $$([ "${BUILD_ARCHITECTURE}" != "" ] && echo "--platform=${BUILD_ARCHITECTURE}" ) \
+				 --tag $(COMPONENT_REGISTRY)/$(COMPONENT_REPOSITORY):$(COMPONENT_TAG) \
+				 --file Dockerfile .
