part of ocu-480: make new component image references more abstract

--- a/new-components/reporters/json-logger/component.yaml
+++ b/new-components/reporters/json-logger/component.yaml
@@ -2,5 +2,5 @@ name: json-logger
 description: "Logs findings"
 type: reporter
 steps:
-  - name: custom-annotation
-    image: "localhost:5000/components/reporters/json-logger:latest"
+  - name: json-reporter
+    image: new-components/reporters/json-logger
