--- a/new-components/scanners/gosec/component.yaml
+++ b/new-components/scanners/gosec/component.yaml
@@ -7,13 +7,13 @@ parameters:
     value: tree
 steps:
   - name: scanner
-    image: "docker.io/securego/gosec:2.15.0"
+    image: docker.io/securego/gosec:2.15.0
     executable: >
       -fmt=sarif
       -no-fail
       -out=/workspace/repos/gosec.json
       /workspace/repos/{{ .parameters.repo_name }}
   - name: parser
-    image: "localhost:5000/components/scanners/gosec:latest"
+    image: new-components/scanners/gosec
     env_vars:
       GOSEC_RAW_OUT_FILE_PATH: repos/gosec.json
