--- a/new-components/enrichers/custom-annotation/component.yaml
+++ b/new-components/enrichers/custom-annotation/component.yaml
@@ -3,7 +3,7 @@ description: "Adds a custom annotation enrichment to the passed findings"
 type: enricher
 steps:
   - name: custom-annotation
-    image: "localhost:5000/components/enrichers/custom-annotation:latest"
+    image: new-components/enrichers/custom-annotation
     env_vars:
       CUSTOM_ANNOTATION_NAME: reachability
       CUSTOM_ANNOTATION_VALUES: '{"foo":"bar"}'
