part of ocu-480: add default values for new component Dockerfile

--- a/new-components/Dockerfile
+++ b/new-components/Dockerfile
@@ -1,8 +1,8 @@
 # Used only to build Go binaries.
 FROM golang:1.23.3 AS builder
 
-ARG COMPONENT_PATH
-ARG COMPONENT_BINARY_SOURCE_PATH
+ARG COMPONENT_PATH=.
+ARG COMPONENT_BINARY_SOURCE_PATH=cmd/main.go
 
 WORKDIR /wrk
 
