part of ocu-500: add custom-annotation, git-clone and json-logger executable paths

--- a/new-components/enrichers/custom-annotation/component.yaml
+++ b/new-components/enrichers/custom-annotation/component.yaml
@@ -7,3 +7,4 @@ steps:
     env_vars:
       CUSTOM_ANNOTATION_NAME: reachability
       CUSTOM_ANNOTATION_VALUES: '{"foo":"bar"}'
+    executable: /bin/app
