--- a/new-components/targets/git-clone/component.yaml
+++ b/new-components/targets/git-clone/component.yaml
@@ -14,3 +14,4 @@ steps:
       GIT_CLONE_REPO_URL: "{{ .parameters.repo_url }}"
       GIT_CLONE_REFERENCE: "{{ .parameters.reference }}"
     image: new-components/targets/git-clone
+    executable: /bin/target
