part of ocu-502: use dynamic volumes for git clone
as part of the refactoring, the clone path is now completely dynamic and
the component expects the path as an environment variable

--- a/new-components/targets/git-clone/dockerfiles/git-clone/Dockerfile
+++ b/new-components/targets/git-clone/dockerfiles/git-clone/Dockerfile
@@ -24,7 +24,7 @@ FROM gcr.io/distroless/base-debian12
 COPY --from=builder /wrk/target /bin/target
 
 # Setting the workdir where we'll clone repositories.
-WORKDIR /workspace/repos
+WORKDIR /
 
 # Set the binary as the entry point
 ENTRYPOINT ["/bin/target"]
