--- a/new-components/targets/git-clone/component.yaml
+++ b/new-components/targets/git-clone/component.yaml
@@ -13,5 +13,6 @@ steps:
     env_vars:
       GIT_CLONE_REPO_URL: "{{ .parameters.repo_url }}"
       GIT_CLONE_REFERENCE: "{{ .parameters.reference }}"
+      GIT_CLONE_PATH: "{{ sourceCodeWorkspace }}"
     image: new-components/targets/git-clone
     executable: /bin/target
