--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -40,9 +40,6 @@ jobs:
         with:
           go-version-file: smithyctl/go.mod
 
-      - name: Build CLI
-        run: make smithyctl/cmd/bin
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -50,8 +47,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run Packaging
+      - name: Build CLI, component images and package
         run: |
+          set -ex
+          make smithyctl/bin
+          ./bin/smithyctl/cmd/linux/amd64/smithyctl \
+            --debug-enabled=true \
+            --debug-level=debug \
+            component \
+              build \
+                --registry-auth-enabled=true \
+                --registry-auth-username=${{ github.actor }} \
+                --registry-auth-password=${{ secrets.GITHUB_TOKEN }} \
+                --registry-url=ghcr.io \
+                --sdk-version=${{ steps.sdk_version.outputs.sdk_version }} \
+                --tag=${{ steps.tag_info.outputs.version }} \
+                ${GITHUB_REF#refs/tags/}/component.yaml
+
           ./bin/smithyctl/cmd/linux/amd64/smithyctl \
             --debug-enabled=true \
             --debug-level=debug \
@@ -62,8 +74,8 @@ jobs:
                 --registry-auth-password=${{ secrets.GITHUB_TOKEN }} \
                 --registry-url=ghcr.io \
                 --sdk-version=${{ steps.sdk_version.outputs.sdk_version }} \
-                --spec-path=new-components/${{ steps.tag_info.outputs.component_type }}/${{ steps.tag_info.outputs.component_name }}/component.yaml \
-                --version=${{ steps.tag_info.outputs.version }}
+                --version=${{ steps.tag_info.outputs.version }} \
+                ${GITHUB_REF#refs/tags/}/component.yaml
 
       - name: Trigger repackaging event in SAAS
         uses: peter-evans/repository-dispatch@v2
