--- a/examples/golang/workflow.yaml
+++ b/examples/golang/workflow.yaml
@@ -3,5 +3,6 @@ name: gosec
 components:
 - component: file://new-components/targets/git-clone/component.yaml
 - component: file://new-components/scanners/gosec/component.yaml
+- component: file://new-components/scanners/nancy/component.yaml
 - component: file://new-components/enrichers/custom-annotation/component.yaml
 - component: file://new-components/reporters/json-logger/component.yaml
