--- a/examples/trivy-with-local-image/workflow.yaml
+++ b/examples/trivy-with-local-image/workflow.yaml
@@ -2,6 +2,7 @@ name: trivy-based-image-scanning
 description: |
   Trivy based workflow for image scanning. Temporarily uses a git clone component which is not actually used
 components:
+- component: file://new-components/targets/image-get/component.yaml
 - component: file://new-components/scanners/trivy/component.yaml
 - component: file://new-components/enrichers/custom-annotation/component.yaml
 - component: file://new-components/reporters/json-logger/component.yaml
