--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -64,6 +64,7 @@ jobs:
                 --registry-url=ghcr.io \
                 --sdk-version=${{ steps.sdk_version.outputs.sdk_version }} \
                 --tag=${{ steps.tag_info.outputs.version }} \
+                --push \
                 "${{ steps.tag_info.outputs.component_dir }}/component.yaml"
 
           ./bin/smithyctl/cmd/linux/amd64/smithyctl \
