pass labels to custom image building make target

--- a/new-components/targets/git-clone/Makefile
+++ b/new-components/targets/git-clone/Makefile
@@ -5,6 +5,7 @@ COMPONENT_REGISTRY=localhost:5000
 COMPONENT_REPOSITORY=smithy-security/smithy/components/targets/git-clone
 COMPONENT_TAG=latest
 SDK_VERSION=unset
+BUILD_LABELS=
 
 run:
 	docker-compose up --build --force-recreate --remove-orphans gitea target
@@ -28,5 +29,6 @@ build-target:
 
 image:
 	docker build $$([ "${BUILD_ARCHITECTURE}" != "" ] && echo "--platform=${BUILD_ARCHITECTURE}" ) \
+				 --label "$(BUILD_LABELS)" \
 				 --tag $(COMPONENT_REGISTRY)/$(COMPONENT_REPOSITORY):$(COMPONENT_TAG) \
 				 --file dockerfiles/git-clone/Dockerfile .
