fix nancy scanner container Dockerfile to use bash as an entrypoint and Go 1.24

--- a/new-components/scanners/nancy/scanner/Dockerfile
+++ b/new-components/scanners/nancy/scanner/Dockerfile
@@ -1,8 +1,10 @@
 FROM docker.io/sonatypecommunity/nancy:latest AS nancy
-FROM golang:1.20
+
+FROM golang:1.24
 
 COPY --from=nancy /nancy /nancy
 COPY ./entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-ENTRYPOINT [ "/entrypoint.sh" ]
+ENTRYPOINT [ "/bin/bash" ]
+CMD [ "-c", "/entrypoint.sh" ]
