set labels to custom component container images

--- a/new-components/scanners/bandit/scanner/Makefile
+++ b/new-components/scanners/bandit/scanner/Makefile
@@ -4,8 +4,10 @@ BUILD_ARCHITECTURE=
 COMPONENT_REGISTRY=
 COMPONENT_REPOSITORY=
 COMPONENT_TAG=
+BUILD_LABELS=
 
 image:
 	docker build $$([ "${BUILD_ARCHITECTURE}" != "" ] && echo "--platform=${BUILD_ARCHITECTURE}" ) \
+				 --label "$(BUILD_LABELS)" \
 				 --tag $(COMPONENT_REGISTRY)/$(COMPONENT_REPOSITORY):$(COMPONENT_TAG) \
 				 --file Dockerfile .
