--- a/new-components/enrichers/reachability/cdxgen-atom-runner/Makefile
+++ b/new-components/enrichers/reachability/cdxgen-atom-runner/Makefile
@@ -4,6 +4,7 @@ BUILD_ARCHITECTURE=
 COMPONENT_REGISTRY=
 COMPONENT_REPOSITORY=
 COMPONENT_TAG=
+BUILD_LABELS=
 
 image:
 	docker build $$([ "${BUILD_ARCHITECTURE}" != "" ] && echo "--platform=${BUILD_ARCHITECTURE}" ) \
