--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Extract SDK Version
         id: sdk_version
         run: |
+          set -ex
           SDK_VERSION=$(make COMPONENT_DIR=${{ steps.tag_info.outputs.component_dir }} component-sdk-version)
           echo "sdk_version=${SDK_VERSION}" >> ${GITHUB_OUTPUT}
 
