--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
 
       - name: Extract tag details
         id: tag_info
@@ -34,6 +37,9 @@ jobs:
       - name: Extract SDK Version
         id: sdk_version
         run: |
+          set -ex
+          git tag -l | sort -Vr | head -n 30
+          echo "showing tags"
           SDK_VERSION=$(make COMPONENT_DIR=${{ steps.tag_info.outputs.component_dir }} component-sdk-version)
           echo "sdk_version=${SDK_VERSION}" >> ${GITHUB_OUTPUT}
 
