--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: Extract tag details
         id: tag_info
