fix slack component manifest

--- a/components/reporters/slack/component.yaml
+++ b/components/reporters/slack/component.yaml
@@ -4,9 +4,9 @@ type: reporter
 parameters:
   - name: slack_webhook
     type: string
-    value: ""
 steps:
   - name: slack
     image: components/reporters/slack
+    executable: /bin/app
     env_vars:
-      - SLACK_WEBHOOK: {{ .parameters.slack_webhook }}
+      SLACK_WEBHOOK: {{ .parameters.slack_webhook }}
