--- a/components/reporters/defectdojo/component.yaml
+++ b/components/reporters/defectdojo/component.yaml
@@ -1,26 +1,25 @@
-name: defectdojo
+name: "defectdojo"
 description: "Logs findings to remote defectdojo"
-type: reporter
+type: "reporter"
 parameters:
-  - name: dojo_user
-    type: string
+  - name: "dojo_user"
+    type: "string"
     value: ""
-  - name: dojo_api_key
-    type: string
+  - name: "dojo_api_key"
+    type: "string"
     value: ""
-  - name: dojo_api_url
-    type: string
+  - name: "dojo_api_url"
+    type: "string"
     value: ""
-  - name: dojo_product_id
-    type: string
+  - name: "dojo_product_id"
+    type: "string"
     value: ""
 steps:
-  - name: defectdojo
-    image: components/reporters/defectdojo
-    executable: /bin/app
+  - name: "defectdojo"
+    image: "components/reporters/defectdojo"
+    executable: "/bin/app"
     env_vars:
-      - DOJO_USER: {{ .parameters.dojo_user }}
-      - DOJO_API_KEY: {{ .parameters.dojo_api_key }}
-      - DOJO_API_URL: {{ .parameters.dojo_api_url }}
-      - DOJO_PRODUCT_ID: {{ .parameters.dojo_product_id }}
-
+      DOJO_USER: "{{ .parameters.dojo_user }}"
+      DOJO_API_KEY: "{{ .parameters.dojo_api_key }}"
+      DOJO_API_URL: "{{ .parameters.dojo_api_url }}"
+      DOJO_PRODUCT_ID: "{{ .parameters.dojo_product_id }}"
