--- a/components/reporters/slack/component.yaml
+++ b/components/reporters/slack/component.yaml
@@ -1,12 +1,13 @@
-name: slack
+name: "slack"
 description: "Logs findings to slack"
-type: reporter
+type: "reporter"
 parameters:
-  - name: slack_webhook
-    type: string
+  - name: "slack_webhook"
+    type: "string"
+    value: ""
 steps:
-  - name: slack
-    image: components/reporters/slack
-    executable: /bin/app
+  - name: "slack"
+    image: "components/reporters/slack"
+    executable: "/bin/app"
     env_vars:
-      SLACK_WEBHOOK: {{ .parameters.slack_webhook }}
+      SLACK_WEBHOOK: "{{ .parameters.slack_webhook }}"
