--- a/components/scanners/zaproxy/zap-authenticated-scan/requirements.txt
+++ b/components/scanners/zaproxy/zap-authenticated-scan/requirements.txt
@@ -2,6 +2,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 idna==3.10
 python-owasp-zap-v2.4==0.1.0
+PyYAML==6.0.2
 requests==2.32.3
 six==1.17.0
 urllib3==2.3.0
